# clamav-client

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs
tests/: clamav_client.rs
