[package]
name = "revolt_clamav-client"
version = "0.1.5"
authors = ["Thorsten Blum", "Paul Makles <insrt.uk>"]
edition = "2018"
repository = "https://github.com/insertish/rust-clamav-client"
description = "ClamAV client library"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "clamd", "anitvirus"]
