[package]
name = "clamav-client"
version = "0.2.0"
edition = "2021"
authors = ["Thorsten Blum", "Paul Makles <insrt.uk>", "Luna Nova <luna@mint.lgbt>"]
repository = "https://github.com/michiru-me/clamav-client"
description = "A Rust ClamAV client"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "clamd", "antivirus"]
